# desktop_app_template

./: .gitmodules  CMakeLists.txt  main.cpp  readme.md
.github/workflows/: codeql.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Dependencies.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  ProjectOptions.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  SystemLink.cmake
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
docs/: dependencies.md
src/: CMakeLists.txt  application.cpp  main.cpp
tests/: CMakeLists.txt  test_sample.cpp
